--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Domain Verification Dogfood</title>
-
+<meta name="facebook-domain-verification" content="fb9blyyg3xem1367ce2ep73ypuy9mg" />
   </head>
 
 
