--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html>
   <head>
-    <title>Domain Verification Dogfood</title>
+    <title>Domain Verification Dogfood - Take 28</title>
 <meta name="facebook-domain-verification" content="fb9blyyg3xem1367ce2ep73ypuy9mg" />
   </head>
 
 
   <body>
-    <h1>Now Entering The Land of Domain Verification</h1>
+    <h1>Now Entering The Land of Domain Verification - Abandon Hope</h1>
     
     <h2>
         :)
